Release Note

* current
  * reset jobSubStatus and jobMetrics in retried ES jobs
  * disabled updating nFilesOnHold in updateJob by transferring pmerge
  * using new eventlookup client
  * check sub to reduce nFilesOnHold when merging is killed
  * added protection to updateUmergeDataset to avoid concurrent update
  * disabled updating nFilesOnHold by transferring for trn_*
  * fixed Closer to update dataset status after unmerge datasets are updated
  * removed priority reduction for ES retry
  * changed datasetManager to kick stalled merging jobs
  * fixed killUnusedEventServiceConsumers not to kill running consumers
  * added toreassign to the list of active task status
  * added --prodSourceLabel to killTask
  * fixed fileCallbackListener to use TSL instead of sslv3
  * extracting LB Nr
  * changed panda.py to measure execution time for each call
  * using FileCatalogException as a fatal error for now
  * filling job summary fields for prod_test
  * changed ActiveMQ broker
  * changed to allow users to send prestaging requests to DDM
  * fixed getJob for esmerge to send only successful logs
  * added a protection to reassign JEDI jobs in defined
  * added a protection to AdderGen against esmerge xml
  * fixed es merge job generation
  * changed messages for finished by callback or catalog check
  * introducing multiporcesssing in add.py
  * kill instead of reassign in copyArchive
  * sending jediTaskID to the pilot for anal jobs
  * changed array limit in getEventRanges
  * added FinishedJobsByCallback/Catalog to SLS 
  * fixed EventPicker for fatal errors
  * fixed ES retry for failed jobs
  * reduced interval for catalog check to 4h  
  * introduced --eventPickSkipDaTRI
  * updating task status when EventPicker failed
  * making EventPicker log available to users
  * parsing DN when setting owner in EventPicker
  * reduced sleep interval in AdderAtlas
  * fixed datasetMgr not to delete _sub at dst:
  * fixed location registration for _sub + dst: